--- a/jax_intro.ipynb
+++ b/jax_intro.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,8 @@
       " [2. 4.]]\n",
       "jnp.linalg.inv(A):\n",
       " [[-2.0000002   1.0000001 ]\n",
-      " [ 1.5000001  -0.50000006]]\n"
+      " [ 1.5000001  -0.50000006]]\n",
+      "2.5\n"
      ]
     }
    ],
@@ -949,7 +950,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -963,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0rc2"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
